// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://buildingim.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="BuildingIM logo"
        src="/images/logos/buildingim-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please enter a new password for your account.
  </div>
  <form
    className="sign-in-form form"
    id="reset-password-form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <input
      className="default"
      id="confirmPassword"
      name="confirmPassword"
      onChange={[Function]}
      placeholder="Repeat Password"
      type="password"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Change Password"
    />
  </form>
</Fragment>
`;

exports[`Should render with webp 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://buildingim.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="BuildingIM logo"
        src="/images/logos/buildingim-logo.webp"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please enter a new password for your account.
  </div>
  <form
    className="sign-in-form form"
    id="reset-password-form"
    onSubmit={[Function]}
  >
    <input
      className="default"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
    <input
      className="default"
      id="confirmPassword"
      name="confirmPassword"
      onChange={[Function]}
      placeholder="Repeat Password"
      type="password"
      value=""
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Change Password"
    />
  </form>
</Fragment>
`;

exports[`Submit password change 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://buildingim.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="BuildingIM logo"
        src="/images/logos/buildingim-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please enter a new password for your account.
  </div>
  <div
    className="lds-ring"
  >
    <div />
    <div />
    <div />
    <div />
  </div>
</Fragment>
`;

exports[`Submit password change and respond with failure 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://buildingim.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="BuildingIM logo"
        src="/images/logos/buildingim-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please enter a new password for your account.
  </div>
  <div
    className="error-callout"
  >
    <div />
  </div>
  <form
    className="sign-in-form form"
    id="reset-password-form"
    onSubmit={[Function]}
  >
    <input
      className="filled"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="Password123!"
    />
    <input
      className="filled"
      id="confirmPassword"
      name="confirmPassword"
      onChange={[Function]}
      placeholder="Repeat Password"
      type="password"
      value="Password123!"
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Change Password"
    />
  </form>
</Fragment>
`;

exports[`Submit password change and respond with success 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://buildingim.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="BuildingIM logo"
        src="/images/logos/buildingim-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please enter a new password for your account.
  </div>
  <div
    className="auth-form"
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <h3>
      Your password has been successfully changed.
    </h3>
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Back to login page"
    />
    /&gt;
  </div>
</Fragment>
`;

exports[`Submit password change but passwords don't match 1`] = `
<Fragment>
  <div
    className="logo-container"
  >
    <a
      href="https://buildingim.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      <img
        alt="BuildingIM logo"
        src="/images/logos/buildingim-logo.png"
      />
    </a>
  </div>
  <div
    className="welcome-text-heading"
  >
    Welcome
  </div>
  <div
    className="welcome-text-body"
  >
    Please enter a new password for your account.
  </div>
  <div
    className="error-callout"
  >
    <div>
      Passwords do not match
    </div>
  </div>
  <form
    className="sign-in-form form"
    id="reset-password-form"
    onSubmit={[Function]}
  >
    <input
      className="filled"
      id="password"
      name="password"
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value="These do"
    />
    <input
      className="filled"
      id="confirmPassword"
      name="confirmPassword"
      onChange={[Function]}
      placeholder="Repeat Password"
      type="password"
      value="not match"
    />
    <div
      className="spacer"
    />
    <input
      className="submit-button"
      id="submit"
      onClick={[Function]}
      type="submit"
      value="Change Password"
    />
  </form>
</Fragment>
`;
